--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
 title: Making DMP Tools Actionable
-description: As part of Data Stewardship 2019 lecture this tools allows to extract machine-actionable DMPs (maDMPs) from RDMO, a popular tool for managing DMPs
+description: "As part of Data Stewardship 2019 lecture this tools allows to extract <a href='https://github.com/RDA-DMP-Common/RDA-DMP-Common-Standard' target='_blank'>machine-actionable DMPs (maDMPs)</a> from <a href='https://rdmorganiser.github.io/' target='_blank'>RDMO</a>, a popular tool for managing DMPs.<br><br>This tool is licensed under the MIT License.<br><br>Copyright &copy; 2019 Gerald Weber, Helmuth Breitenfellner"
 show_downloads: true
 logo: logo.png
